# relichelper

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
agent/: Cargo.toml
agent/src/: lib.rs  main.rs  paths.rs  session.rs
agent/src/eelog/: event.rs  mod.rs  parser.rs  watcher.rs
agent/src/inventory/: mod.rs  store.rs
agent/src/ocr/: capture.rs  matcher.rs  mod.rs  recognize.rs  regions.rs  segment.rs
agent/src/refdata/: mod.rs  model.rs  naming.rs  parse.rs  query.rs  store.rs
agent/tests/: parser_integration.rs
agent/tests/fixtures/: drops_sample.html
