[package]
name = "relichelper-agent"
version = "0.1.0"
edition = "2021"
description = "RelichHelper local agent: EE.log watcher, OCR, and overlay bridge"
license = "MIT"

[lib]
name = "relichelper_agent"
path = "src/lib.rs"

[[bin]]
name = "relichelper-agent"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
