[package]
name = "relichelper-agent"
version = "0.1.0"
edition = "2021"
description = "RelichHelper local agent: EE.log watcher, OCR, and overlay bridge"
license = "MIT"

[lib]
name = "relichelper_agent"
path = "src/lib.rs"

[[bin]]
name = "relichelper-agent"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
strsim = "0.11"
image = { version = "0.25", optional = true }
xcap = { version = "0.0.14", optional = true }

[features]
# OCR of the reward/inventory screens. Crops with the `image` crate and shells
# out to the `tesseract` binary (no native linking). Enable with --features ocr.
ocr = ["dep:image"]
# Live screen capture (xcap) for the daemon/overlay. Needs a display at runtime
# (X11, or Wayland via the portal / XWayland). Enable with --features capture.
capture = ["ocr", "dep:xcap"]

[dev-dependencies]
